[package]
name = "sanakirja"
description = "A key-value dictionary, using copy-on-write and B-trees."
version = "0.2.0"
authors = ["Pierre-Étienne Meunier"]
# build = "build.rs"
license = "MPL-2.0"
documentation = "http://pijul.org/sanakirja/doc/sanakirja"
repository = "http://pijul.org/sanakirja"


[dependencies]
libc="0.2"
log="0.3"
env_logger="0.3"
fs2="0.2"
rand="0.3"
memmap = "0.2"
tempdir="0.3"

rustc-serialize = "*"

[build-dependencies]
libc="0.2"

[dev-dependencies]
tempdir="0.3"
