[package]
name = "sanakirja"
description = "A key-value dictionary, using copy-on-write and B trees."
version = "0.4.4"
authors = ["Pierre-Étienne Meunier"]
license = "MPL-2.0"
documentation = "http://pijul.org/sanakirja/doc/sanakirja"
repository = "http://pijul.org/sanakirja"
include = ["Cargo.toml","src/transaction.rs","src/txn.rs","src/lib.rs","src/put.rs","src/del.rs","src/merge.rs","src/rebalance.rs"]

[dependencies]
log="0.3"
env_logger="0.3"
fs2="0.2"
rand="0.3"
memmap = "0.3"
rustc-serialize = "0.3"

[dev-dependencies]
tempdir="0.3"
